fixed token assets panel on tablet

--- a/src/index.css
+++ b/src/index.css
@@ -735,6 +735,13 @@ body {
 	.heroH1 {
 		font-size: 2.1rem;
 	}
+	.assetsLeftPanel {
+		padding-right: 5%;
+	}
+
+	.assetsRightPanel {
+		padding-left: 5%;
+	}
 }
 
 @media screen and (max-width: 837px) {
@@ -881,7 +888,7 @@ body {
 	.heroImage {
 		padding-right: 15%;
 	}
-  
+
 	.tokenLogo{
 	  width: 100%;
 	  margin-top: 0;
